chat-package/force-app/main/default/objects/Messaging_Transcript__c/Messaging_Transcript__c.object-meta.xml
<CustomObject>
    <description>Stores external message content and transcripts for MIAW Proxy integration.</description>
    <label>Messaging Transcript</label>
    <nameField>
        <displayFormat>MT-{000000}</displayFormat>
        <label>Transcript Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messaging Transcripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>