chat-package/force-app/main/default/objects/Messaging_Transcript__c/fields/Message_Text__c.field-meta.xml
<CustomField>
    <fullName>Message_Text__c</fullName>
    <description>The text content of the message received from external endpoint via bt-proxy.</description>
    <label>Message Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>