chat-package/force-app/main/default/objects/Messaging_Transcript__c/fields/Messaging_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Session_Id__c</fullName>
    <description>Associated Salesforce MessagingSession ID.</description>
    <label>Messaging Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>