chat-package/force-app/main/default/objects/Messaging_Transcript__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>External user identifier from cURL payload.</description>
    <label>User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>